--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -6,7 +6,7 @@
 
 html {
   scroll-behavior: smooth;
-  font-family: "IBM Plex Mono", monospace;
+  font-family: "DM Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
 }
@@ -14,11 +14,7 @@ html {
 @layer base {
   body,
   .body {
-    @apply bg-[#0A0D16] text-[#bebebe] tracking-wide overflow-x-hidden w-[100vw] min-h-screen;
-    /* background-image: url('/assets/images/bg-2.gif');
-    background-repeat: no-repeat;
-    background-size: cover; */
-    /* background-position: center center; */
+    @apply bg-[#fff] text-[#020202] tracking-wide overflow-x-hidden w-[100vw] min-h-screen;
   }
 
   ::-webkit-scrollbar {
@@ -92,22 +88,6 @@ html {
     position: relative;
   }
 
-  .dashboardBox {
-    position: absolute;
-    color: #fff;
-    box-shadow: 2px 2px 10px;
-    background: -webkit-linear-gradient(45deg, transparent 8px, #000 8px),
-      -webkit-linear-gradient(135deg, transparent 8px, #000 8px),
-      -webkit-linear-gradient(225deg, transparent 8px, #000 8px),
-      -webkit-linear-gradient(315deg, #ffffff00 8px, #000 8px);
-    background-position: bottom left, bottom right, top right, top left;
-    -moz-background-size: 50% 50%;
-    -webkit-background-size: 50% 50%;
-    background-size: 50% 50%;
-    background-repeat: no-repeat;
-    position: relative;
-  }
-
   @media (max-width: 500px) {
     input,
     select,
@@ -116,26 +96,10 @@ html {
     }
   }
 
-  .pass-field {
-    padding: 2px;
-  }
-
-  option {
-    background-color: #181b24;
-    color: #939ba3;
-    font-size: 11px;
-  }
-
   input::placeholder {
     color: #5e6266;
     font-size: 12px;
     font-weight: 400;
-  }
-  .dashCard {
-    @apply px-[40px] md:px-[30px] py-[25px] md:py-[15px] rounded-[30px] shadow-md shadow-[#ffffff46] bg-[#191919] flex gap-5 items-center justify-between;
-  }
-  .dashCardTitle {
-    @apply text-[20px] md:text-[22px] font-bold text-[#dfdfdf];
   }
 }
 
@@ -146,37 +110,58 @@ html {
   background-position: center;
 }
 
-.container {
-  max-width: 1200px;
+.header-container {
+  max-width: 1400px;
   margin: auto;
 }
+.container {
+  max-width: 1300px;
+  margin: auto;
+}
+.menu-link {
+  @apply text-[#000] font-bold hover:text-[#d62a4f];
+}
 .active {
-  color: #fff !important;
+  color: #d62a4f !important;
+  font-weight: bold;
+}
+.orange-box {
+  /* background-image: linear-gradient(220deg, #f52f574f 0%, #ed6b1a5b 100%); */
+  @apply rounded-[30px] p-8 md:p-12 border-[1px] border-[#22222246];
+}
+.title-box {
+  background-image: linear-gradient(220deg, #f52f57 0%, #ed6b1a 100%);
+  @apply text-white font-bold w-max rounded-[30px] text-center;
+}
+.banner-section {
+  /* background-image: linear-gradient(220deg, #f52f58 0%, #eaebff 100%); */
+  /* background-image: linear-gradient(220deg, #eaebff 0%, #8cd1d0 100%); */
+  background-image: linear-gradient(220deg, #499998 0%, #134341 100%);
+}
+.why-chumcore-box {
+  background-image: linear-gradient(220deg, #f52f5733 0%, #ed6b1a3d 100%);
 }
 
 .btnn1 {
-  padding: 12px 15px;
-  color: #0a0d16;
-  background: -webkit-linear-gradient(45deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(135deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(225deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(315deg, transparent 6px, #fff 6px);
+  color: #fff;
+  background: -webkit-linear-gradient(45deg, transparent 6px, #134341 6px),
+    -webkit-linear-gradient(135deg, transparent 6px, #134341 6px),
+    -webkit-linear-gradient(225deg, transparent 6px, #134341 6px),
+    -webkit-linear-gradient(315deg, transparent 6px, #134341 6px);
   background-position: bottom left, bottom right, top right, top left;
   -moz-background-size: 50% 50%;
   -webkit-background-size: 50% 50%;
   background-size: 50% 50%;
   background-repeat: no-repeat;
   position: relative;
+  cursor: pointer;
 }
-.btnn1:hover,
-.btnn2:hover {
-  background: transparent;
-  color: #fff;
-  border: 2px solid #ffff;
+.btnn1:hover {
+  transform: translateY(9px) translateX(6px) scale(1.05);
+  transition: 0.3s ease-in;
 }
 .btnn2 {
-  padding: 8px 15px !important;
-  color: #0a0d16;
+  color: #134341;
   background: -webkit-linear-gradient(45deg, transparent 6px, #fff 6px),
     -webkit-linear-gradient(135deg, transparent 6px, #fff 6px),
     -webkit-linear-gradient(225deg, transparent 6px, #fff 6px),
@@ -187,18 +172,7 @@ html {
   background-size: 50% 50%;
   background-repeat: no-repeat;
   position: relative;
-}
-
-.banner-vd {
-  height: 100%;
-  width: 100%;
-  object-fit: cover;
-  z-index: -10000;
-  position: fixed;
-  background-image: url("/assets/videos/bg.gif");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
+  cursor: pointer;
 }
 
 .upppercase {
@@ -214,27 +188,6 @@ html {
 .enter-btn:hover {
   transform: scale(1.1);
   transition: 1s ease-in-out;
-}
-
-.info {
-  border-top: 1px solid red;
-  border-bottom: 1px solid red;
-  border-radius: 7px;
-}
-
-.right-box {
-  box-shadow: 2px 2px 10px #8a8a8a6c;
-  animation: rightBoxContainer 5s 5s forwards infinite;
-}
-.left-box {
-  animation: leftBoxContainer 5s 5s forwards infinite;
-}
-
-.register-box {
-  border-radius: 50px;
-  border-top: 3px solid #b99dfa;
-  border-bottom: 3px solid #b99dfa;
-  box-shadow: 2px 2px 10px #8a8a8a6c;
 }
 
 /* ANIMATIONS */
