--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -9,6 +9,8 @@ html {
   font-family: "DM Sans", sans-serif;
   font-weight: 400;
   font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 @layer base {
