--- a/public/assets/style/index.css
+++ b/public/assets/style/index.css
@@ -63,8 +63,8 @@ html {
   }
 
   button {
-    @apply bg-gradient-to-r from-[#939ba3] to-[#939ba3] text-black;
-    padding: 6px 40px;
+    @apply bg-gradient-to-r from-[#f52f57] to-[#ed6b1a] text-black py-3;
+    /* padding: 6px 40px; */
     border-radius: 10px;
     font-weight: 500;
   }
@@ -73,21 +73,11 @@ html {
   select,
   .pass-field {
     height: 42px;
-    padding: 2px 15px;
+    /* padding: 2px 15px; */
     font-size: 12px !important;
     font-weight: 300;
-    border: 0px;
-    color: #fff;
-    background: -webkit-linear-gradient(45deg, transparent 6px, #181b24 6px),
-      -webkit-linear-gradient(135deg, transparent 6px, #181b24 6px),
-      -webkit-linear-gradient(225deg, transparent 6px, #181b24 6px),
-      -webkit-linear-gradient(315deg, transparent 6px, #181b24 6px);
-    background-position: bottom left, bottom right, top right, top left;
-    -moz-background-size: 50% 50%;
-    -webkit-background-size: 50% 50%;
-    background-size: 50% 50%;
-    background-repeat: no-repeat;
-    position: relative;
+    border: 2px solid #00000094;
+    color: black;
   }
 
   @media (max-width: 500px) {
@@ -127,9 +117,17 @@ html {
   color: #d62a4f !important;
   font-weight: bold;
 }
-.orange-box {
+.impact {
+  background-image: linear-gradient(220deg, #ef6c2b 0%, #fb2564 100%);
+}
+.card-box1 {
   /* background-image: linear-gradient(220deg, #f52f574f 0%, #ed6b1a5b 100%); */
-  @apply rounded-[30px] p-8 md:p-12 border-[1px] border-[#22222246];
+  @apply rounded-[30px] p-8 md:p-12 border-[1px];
+  box-shadow: 4px 4px 8px #2222225e;
+}
+.card-box2 {
+  @apply bg-[#EF6C2B] rounded-[30px] p-8 md:p-12;
+  box-shadow: 4px 4px 8px #22222289;
 }
 .title-box {
   background-image: linear-gradient(220deg, #f52f57 0%, #ed6b1a 100%);
@@ -151,36 +149,11 @@ html {
   background: #3bb6b3;
   border-radius: 25px;
   font-weight: bold;
-  /* background: -webkit-linear-gradient(45deg, transparent 6px, #134341 6px),
-    -webkit-linear-gradient(135deg, transparent 6px, #134341 6px),
-    -webkit-linear-gradient(225deg, transparent 6px, #134341 6px),
-    -webkit-linear-gradient(315deg, transparent 6px, #134341 6px);
-  background-position: bottom left, bottom right, top right, top left;
-  -moz-background-size: 50% 50%;
-  -webkit-background-size: 50% 50%;
-  background-size: 50% 50%;
-  background-repeat: no-repeat;
-  position: relative;
-  cursor: pointer; */
 }
 .btnn1:hover {
   /* transform: translateY(9px) translateX(6px) scale(1.05); */
   background: #156866;
   transition: 0.3s ease-in;
-}
-.btnn2 {
-  color: #134341;
-  background: -webkit-linear-gradient(45deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(135deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(225deg, transparent 6px, #fff 6px),
-    -webkit-linear-gradient(315deg, transparent 6px, #fff 6px);
-  background-position: bottom left, bottom right, top right, top left;
-  -moz-background-size: 50% 50%;
-  -webkit-background-size: 50% 50%;
-  background-size: 50% 50%;
-  background-repeat: no-repeat;
-  position: relative;
-  cursor: pointer;
 }
 
 .upppercase {
